// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-action-blocks> Component Basic usage 1`] = `
<bolt-action-blocks spacing="medium"
                    valign="start"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Border in between each block: false 1`] = `
<bolt-action-blocks spacing="medium"
                    valign="start"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Border in between each block: true 1`] = `
<bolt-action-blocks spacing="medium"
                    valign="start"
                    max-items-per-row="6"
                    borderless
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6 c-bolt-action-blocks--borderless">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Deprecated props still render as expected 1`] = `
<bolt-action-blocks spacing="medium"
                    valign="center"
                    max-items-per-row="2"
                    borderless
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-center c-bolt-action-blocks--item-max-2 c-bolt-action-blocks--borderless">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Subcomponent renders as expected 1`] = `
<bolt-action-block>
  <a href="#!"
     class="c-bolt-action-block"
  >
    <div class="c-bolt-action-block__item c-bolt-action-block__icon">
      <bolt-icon name="download"
                 size="large"
      >
        <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
          <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
          >
            <g fill="none"
               fill-rule="evenodd"
            >
              <path>
              </path>
              <path fill="var(--bolt-theme-icon, currentColor)"
                    d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                    mask="url(#mask-2)"
                    transform="translate(4 19.5)"
              >
              </path>
              <path fill="var(--bolt-theme-icon, currentColor)"
                    d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
              >
              </path>
            </g>
          </svg>
        </span>
      </bolt-icon>
    </div>
    <div class="c-bolt-action-block__item c-bolt-action-block__text">
      Item 1
    </div>
  </a>
</bolt-action-block>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: center 1`] = `
<bolt-action-blocks spacing="medium"
                    valign="center"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-center c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: end 1`] = `
<bolt-action-blocks spacing="medium"
                    valign="end"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-end c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: medium 1`] = `
<bolt-action-blocks spacing="medium"
                    valign="start"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: small 1`] = `
<bolt-action-blocks spacing="small"
                    valign="start"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-small c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: start 1`] = `
<bolt-action-blocks spacing="medium"
                    valign="start"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: xsmall 1`] = `
<bolt-action-blocks spacing="xsmall"
                    valign="start"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-xsmall c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M15 0H1a1 1 0 00-1 1c0 .6.4 1 1 1h14c.6 0 1-.4 1-1 0-.5-.4-1-1-1"
                          mask="url(#mask-2)"
                          transform="translate(4 19.5)"
                    >
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M11.4 17.7c.1.2.4.3.6.3l.6-.3 5.2-6.3c.2-.2.2-.4.1-.7a.8.8 0 00-.7-.4h-2.5V3H9.4v7.3H6.7c-.2 0-.5.2-.6.4L6 11c0 .2 0 .3.2.4l5.2 6.3z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M19 20c0 .6-.4 1-1 1H6a1 1 0 01-1-1V6c0-.5.5-1 1-1h1c0 1.1.9 2 2 2h6a2 2 0 002-2h1c.6 0 1 .5 1 1v14zM9 3h6v2H9V3zm9 0h-1a2 2 0 00-2-2H9a2 2 0 00-2 2H6a3 3 0 00-3 3v14a3 3 0 003 3h12a3 3 0 003-3V6a3 3 0 00-3-3zM13 13v-2c0-.6-.4-1-1-1a1 1 0 00-1 1v2H9a1 1 0 00-1 1c0 .6.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1h-2z"
                    >
                    </path>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <g fill="none"
                     fill-rule="evenodd"
                  >
                    <path>
                    </path>
                    <g fill="var(--bolt-theme-icon, currentColor)">
                      <path d="M4 20.1h16v-11H4v11zM20 2.6h-1V1h-2v1.6H7V1H5v1.6H4a2 2 0 00-2 2v15.5c0 1.1.9 2 2 2h16a2 2 0 002-2V4.6a2 2 0 00-2-2zM6.3 13.1h11.4v-2H6.3zM6.3 17.5h9v-2h-9z">
                      </path>
                    </g>
                  </g>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;
